@@ -7,14 +7,15 @@
 
 package com.powsybl.openrao.data.cracimpl;
 
+import com.powsybl.contingency.Contingency;
 import com.powsybl.iidm.network.Country;
 import com.powsybl.openrao.data.cracapi.Instant;
 import com.powsybl.openrao.data.cracapi.State;
 import com.powsybl.openrao.data.cracapi.cnec.AngleCnec;
 import com.powsybl.openrao.data.cracapi.cnec.FlowCnec;
 import com.powsybl.openrao.data.cracapi.cnec.VoltageCnec;
-import com.powsybl.openrao.data.cracapi.usagerule.UsageMethod;
-import com.powsybl.openrao.data.cracapi.usagerule.UsageRule;
+import com.powsybl.openrao.data.cracapi.triggercondition.TriggerCondition;
+import com.powsybl.openrao.data.cracapi.triggercondition.UsageMethod;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
@@ -29,79 +30,86 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class RemedialActionTest {
     @Test
-    void testNoUsageRulesShouldReturnUndefined() {
+    void testNoTriggerConditionsShouldReturnUndefined() {
         State state = Mockito.mock(State.class);
-        Set<UsageRule> usageRules = Collections.emptySet();
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Collections.emptySet();
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyOneOnInstantUsageRule() {
+    void testOnlyOneOnInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(instant).when(state).getInstant();
-        Set<UsageRule> usageRules = Set.of(new OnInstantImpl(UsageMethod.AVAILABLE, instant));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(new TriggerConditionImpl(instant, null, null, null, UsageMethod.AVAILABLE));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.AVAILABLE, ra.getUsageMethod(state));
     }
 
     @Test
-    void testStrongestInstantUsageRule() {
+    void testStrongestInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(instant).when(state).getInstant();
-        Set<UsageRule> usageRules = Set.of(
-            new OnInstantImpl(UsageMethod.AVAILABLE, instant),
-            new OnFlowConstraintInCountryImpl(UsageMethod.FORCED, instant, Optional.empty(), Country.FR));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(instant, null, null, null, UsageMethod.AVAILABLE),
+            new TriggerConditionImpl(instant, null, null, Country.FR, UsageMethod.FORCED));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyOneOnContingencyStateUsageRule() {
+    void testOnlyOneOnContingencyStateTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
         Mockito.doReturn(instant).when(state).getInstant();
-        Set<UsageRule> usageRules = Set.of(new OnContingencyStateImpl(UsageMethod.AVAILABLE, state));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Contingency contingency = Mockito.mock(Contingency.class);
+        Mockito.when(state.getContingency()).thenReturn(Optional.of(contingency));
+        Set<TriggerCondition> triggerConditions = Set.of(new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.AVAILABLE, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyStrongestStateUsageRule() {
+    void testOnlyStrongestStateTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
         Mockito.doReturn(instant).when(state).getInstant();
+        Contingency contingency = Mockito.mock(Contingency.class);
+        Mockito.when(state.getContingency()).thenReturn(Optional.of(contingency));
 
         FlowCnec flowCnec = Mockito.mock(FlowCnec.class);
         Mockito.doReturn(state).when(flowCnec).getState();
 
-        Set<UsageRule> usageRules = Set.of(
-            new OnContingencyStateImpl(UsageMethod.AVAILABLE, state),
-            new OnConstraintImpl<>(UsageMethod.FORCED, instant, flowCnec));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE),
+            new TriggerConditionImpl(instant, null, flowCnec, null, UsageMethod.FORCED));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testStrongestStateAndInstantUsageRule() {
+    void testStrongestStateAndInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
         Mockito.doReturn(instant).when(state).getInstant();
+        Contingency contingency = Mockito.mock(Contingency.class);
+        Mockito.when(state.getContingency()).thenReturn(Optional.of(contingency));
 
-        Set<UsageRule> usageRules = Set.of(
-            new OnContingencyStateImpl(UsageMethod.AVAILABLE, state),
-            new OnInstantImpl(UsageMethod.FORCED, instant));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE),
+            new TriggerConditionImpl(instant, null, null, null, UsageMethod.FORCED));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnFlowConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnFlowConstraintTriggerConditionAndCnec() {
+        Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
         Instant curativeInstant = Mockito.mock(Instant.class);
@@ -109,26 +117,29 @@ class RemedialActionTest {
 
         State autoState = Mockito.mock(State.class);
         Mockito.when(autoState.getInstant()).thenReturn(autoInstant);
+        Mockito.when(autoState.getContingency()).thenReturn(Optional.of(contingency));
         State curativeState = Mockito.mock(State.class);
         Mockito.when(curativeState.getInstant()).thenReturn(curativeInstant);
+        Mockito.when(curativeState.getContingency()).thenReturn(Optional.of(contingency));
 
         FlowCnec autoFlowCnec = Mockito.mock(FlowCnec.class);
         Mockito.when(autoFlowCnec.getState()).thenReturn(autoState);
         FlowCnec curativeFlowCnec = Mockito.mock(FlowCnec.class);
         Mockito.when(curativeFlowCnec.getState()).thenReturn(curativeState);
 
-        Set<UsageRule> usageRules = Set.of(
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, autoFlowCnec),
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, curativeFlowCnec)
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(autoInstant, null, autoFlowCnec, null, UsageMethod.FORCED),
+            new TriggerConditionImpl(autoInstant, null, curativeFlowCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnAngleConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnAngleConstraintTriggerConditionAndCnec() {
+        Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
         Instant curativeInstant = Mockito.mock(Instant.class);
@@ -136,26 +147,29 @@ class RemedialActionTest {
 
         State autoState = Mockito.mock(State.class);
         Mockito.when(autoState.getInstant()).thenReturn(autoInstant);
+        Mockito.when(autoState.getContingency()).thenReturn(Optional.of(contingency));
         State curativeState = Mockito.mock(State.class);
         Mockito.when(curativeState.getInstant()).thenReturn(curativeInstant);
+        Mockito.when(curativeState.getContingency()).thenReturn(Optional.of(contingency));
 
         AngleCnec autoAngleCnec = Mockito.mock(AngleCnec.class);
         Mockito.when(autoAngleCnec.getState()).thenReturn(autoState);
         AngleCnec curativeAngleCnec = Mockito.mock(AngleCnec.class);
         Mockito.when(curativeAngleCnec.getState()).thenReturn(curativeState);
 
-        Set<UsageRule> usageRules = Set.of(
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, autoAngleCnec),
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, curativeAngleCnec)
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(autoInstant, null, autoAngleCnec, null, UsageMethod.FORCED),
+            new TriggerConditionImpl(autoInstant, null, curativeAngleCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnVoltageConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnVoltageConstraintTriggerConditionAndCnec() {
+        Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
         Instant curativeInstant = Mockito.mock(Instant.class);
@@ -163,20 +177,22 @@ class RemedialActionTest {
 
         State autoState = Mockito.mock(State.class);
         Mockito.when(autoState.getInstant()).thenReturn(autoInstant);
+        Mockito.when(autoState.getContingency()).thenReturn(Optional.of(contingency));
         State curativeState = Mockito.mock(State.class);
         Mockito.when(curativeState.getInstant()).thenReturn(curativeInstant);
+        Mockito.when(curativeState.getContingency()).thenReturn(Optional.of(contingency));
 
         VoltageCnec autoVoltageCnec = Mockito.mock(VoltageCnec.class);
         Mockito.when(autoVoltageCnec.getState()).thenReturn(autoState);
         VoltageCnec curativeVoltageCnec = Mockito.mock(VoltageCnec.class);
         Mockito.when(curativeVoltageCnec.getState()).thenReturn(curativeState);
 
-        Set<UsageRule> usageRules = Set.of(
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, autoVoltageCnec),
-            new OnConstraintImpl<>(UsageMethod.FORCED, autoInstant, curativeVoltageCnec)
+        Set<TriggerCondition> triggerConditions = Set.of(
+            new TriggerConditionImpl(autoInstant, null, autoVoltageCnec, null, UsageMethod.FORCED),
+            new TriggerConditionImpl(autoInstant, null, curativeVoltageCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
